--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: 'Poppins', sans-serif;
+}
+
+nav{
+  height: 70px;
+  display: flex;
+  padding: 20px 36px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+
+.gray {
+  color: #918E9B;
+}
+
+section{
+  padding: 20px;
+}
+
+.hero{
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-photo{
+  max-width: 1000px;
+  align-self: center;
+}
+
+.hero--header{
+  margin-bottom: 16px;
+}
+
+.hero--text{
+  margin-top: 0;
+}
+
+.card {
+  width: 175px;
+  font-size: 12px;
+  display: flex;
+  flex: 0 0 auto;
+  flex-direction: column;
+  position: relative;
+}
+
+.card--image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card--stats {
+  display: flex;
+  align-items: center;
+}
+
+.card--star {
+   height: 14px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.cards-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.card--badge {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  background-color: white;
+  padding: 3px 5px;
+  border-radius: 2px;
+  font-weight: bold;
 }
